# api/model/models.ts
@@ -6,9 +6,10 @@ export * from './profileResponse';
 export * from './response';
 export * from './signupRequest';
 export * from './statusResponse';
-export * from './statusesResponse';
-export * from './statusesResponseInner';
+export * from './statusesIndexResponse';
+export * from './statusesIndexResponseStatuses';
+export * from './statusesLastResponse';
 export * from './updateProfileRequest';
 export * from './userResponse';
 export * from './usersResponse';
-export * from './usersResponseInner';
+export * from './usersResponseUsers';
