# api/model/statusesResponse.ts
@@ -2,15 +2,17 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-16T01:01:05Z
+ * OpenAPI spec version: 2019-11-18T18:40:47Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
-import { StatusesResponseInner } from './statusesResponseInner';
+import { StatusesResponseStatuses } from './statusesResponseStatuses';
 
 
-export interface StatusesResponse extends Array<StatusesResponseInner> { 
+export interface StatusesResponse { 
+    statuses?: Array<StatusesResponseStatuses>;
+    lastEvaluatedKey?: any;
 }
