# api/model/statusesResponseStatuses.ts
@@ -2,7 +2,7 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-19T00:53:19Z
+ * OpenAPI spec version: 2019-11-18T18:40:47Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -11,5 +11,10 @@
  */
 
 
-export interface Empty { 
+export interface StatusesResponseStatuses { 
+    message?: string;
+    ownerHandle?: string;
+    attachmentSrc?: string;
+    date?: string;
+    id?: string;
 }
