# api/model/usersResponse.ts
@@ -2,15 +2,18 @@
  * twitter-api
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * OpenAPI spec version: 2019-11-16T01:01:05Z
+ * OpenAPI spec version: 2019-11-19T00:53:19Z
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
  * https://github.com/swagger-api/swagger-codegen.git
  * Do not edit the class manually.
  */
-import { UsersResponseInner } from './usersResponseInner';
+import { UsersResponseUsers } from './usersResponseUsers';
 
 
-export interface UsersResponse extends Array<UsersResponseInner> { 
+export interface UsersResponse { 
+    users?: Array<UsersResponseUsers>;
+    userHandle?: string;
+    followHandle?: string;
 }
