# api/model/usersResponseUsers.ts
@@ -11,5 +11,8 @@
  */
 
 
-export interface Empty { 
+export interface UsersResponseUsers { 
+    handle?: string;
+    name?: string;
+    password?: string;
 }
